Update html title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
               <div>
                 SixSq
                 <br>Rue du Bois-du-Lan, 8
-                <br>1217, Geneva
-                <br>Switzerland
+                <br>1217, Meyrin
+                <br>Geneva, Switzerland
               </div>
             </div>
             <br/>
@@ -22,7 +22,7 @@
               <div>
                 SixSq
                 <br>6700 Côte de Liesse, Suite 105  
-                <br>Montréal, Québec, H4T-2B5    
+                <br>Montréal (St-Laurent), Québec, H4T 2B5    
                 <br>Canada
               </div>
             </div>
