--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -31,7 +31,7 @@
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
                     <h2>Cloud Neutrality</h2>
-                    <p>SlipStream communicates with all mainstream IaaS cloud services via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision. SlipStream’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions.</p>
+                    <p>SlipStream communicates with all mainstream <a href="/products/slipstream/cloud-connectors/">IaaS cloud services</a> via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision. SlipStream’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/cloud-connectors">All clouds &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
