Add devops, update to pass and welcome page

--- a/_layouts/article_nuvla_overview.html
+++ b/_layouts/article_nuvla_overview.html
@@ -98,45 +98,22 @@
                 </h1>
               </div>
           </div>
-          <div id="var" class="row row-highlights">
-              <div class="col-md-6 col-2-text">
-                  <h2>Value Added Reseller: facilitate your application deployment</h2>
-                  <p>If you are considering cloud but don't want to make that big, and possibly expensive, decision of signing up with one cloud provider, Nuvla can give you access to most of the mainstream IaaS providers without being stuck with vendor lock-in.</p>
-                  <center>
-                    <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation">Learn more &raquo;</a>
-                  </center>
-              </div>
+          <div id="newbies" class="row row-highlights">
               <div class="col-md-6 col-2-image">
                 <h1>
                   <center>
-                    <img style="max-height: 280px;" src="/img/content/eguides/VAR_eGuide_screen_shot.png" />
-                  </center>
-                </h1>
-              </div>
-          </div>
-          <div id="msp" class="row row-highlights">
-              <div class="col-md-6 col-2-image">
-                <h1>
-                  <center>
-                    <img style="max-height: 280px;" src="/img/content/eguides/MSP_eGuide_screen_shot.png" />
+                    <span class="glyphicon glyphicon-road"></span>
                   </center>
                 </h1>
               </div>
               <div class="col-md-6 col-2-text">
-                <h2>Managed Service Provider: operating in the public cloud space</h2>
-                <p>The Managed Services sector represents the largest growing component of the IT market. Nuvla helps MSPs differentiate themselves in this highly competitive environment by allowing them to take advantage of automation and provide a higher level of service without adding cost.</p>
-                <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation">Learn more &raquo;</a>
-                </center>
-              </div>
-          </div>
-          <div id="iaas-provider" class="row row-highlights">
-              <div class="col-md-6 col-2-text">
-                <h2>Public IaaS provider: facilitate provisioning of apps on your cloud</h2>
-                <p>The commoditisation of cloud resources has squeezed IaaS service providers forcing them to differentiate their services from their competitors or to live with ever reducing margins. They face increasing competition from cloud service offerings at all levels. Nuvla meets these challenges, providing advanced automation features and significant benefits simplifying the transition from a IaaS provider to a Managed Service Provider.</p>
-                <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation">Learn more &raquo;</a>
-                </center>
+                  <h2>Organisations Wanting Easier Access to Public Clouds</h2>
+                  <p>Comfortable with using public clouds? Want to avoid lock-in yet benefit from amazing application
+                  deployment automation? You will love Nuvla.</p>
+                  <p>The single pane of glass dashboard and detailed usage summaries will put you in the fast
+                  lane in no time and keep you in the driving seat.
+                  </p>
+                  <center><a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a></center>
               </div>
           </div>
       </div>
@@ -154,10 +131,10 @@
                 <div class="col-md-6 col-2-text">
 		            <h2>Sign up for free!</h2>
 		            <p>Nuvla is free. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
-                <center>
-                  <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a>
-                </center>
-              </div>
+                    <center>
+                      <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla/tryme">Try me &raquo;</a>
+                    </center>
+                </div>
             </div>
         </div>
       </div>
