--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -24,14 +24,15 @@
                 </div>
                 <div class="col-md-6 col-2-text">
                     <h2>Automation</h2>
-                    <p>Repetitive, manual deployments are costing your organisation money. Introducing automation will reduce expenditure and give your people more time to create greater things.</p>
+                    <p>Repetitive, manual deployments are costing your organisation money. Introducing automation will reduce expenditure and give your teams more time to create greater things.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/tryme">Try me &raquo;</a></center>
                 </div>
             </div>
             <div class="row row-highlights">
                 <div class="col-md-6 col-2-text">
                     <h2>Cloud Neutrality</h2>
-                    <p>SlipStream communicates with all mainstream <a href="/products/slipstream/cloud-connectors/">IaaS cloud services</a> via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision. SlipStream’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions.</p>
+                    <p>SlipStream communicates with all mainstream cloud, i.e.<a href="/products/slipstream/cloud-connectors/">, 
+                    <a href="http://media.sixsq.com/blog/tackling-cloud-jargon">IaaS</a>, solutions.</a> via a connector architecture. This means we're already talking to the cloud you use and will make it easier for you to deploy your apps there. Or if you can't decide which cloud to use, SlipStream takes the stress out of making the wrong decision. SlipStream’s cloud neutrality means it isolates users from vendor lock-in, providing unprecedented flexibility in your choice of cloud solutions.</p>
                     <center><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/cloud-connectors">All clouds &raquo;</a></center>
                 </div>
                 <div class="col-md-6 col-2-image vertical-align">
@@ -163,7 +164,7 @@
                     </h1>
                 </div>
                 <div class="col-md-6 col-2-text">
-		            <h2>Sign up for the free on Nuvla, the SlipStream as a Service managed by SixSq</h2>
+		            <h2>Sign up for free on Nuvla, the SlipStream as a Service managed by SixSq</h2>
 		            <p>SlipStream can be used for free via Nuvla. You only pay for the cloud services you consume. This is a good option if your organisation is happy with the idea of public cloud. Or if you just want to test it out. Signing up takes just a couple of minutes and the user interface is a pleasure. Go ahead, give it a try!</p>
                 <center>
                   <a class="btn btn-primary btn-lg" role="button" href="/products/slipstream/tryme">Try me &raquo;</a>
