--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -13,23 +13,100 @@
       </div>
     </div>-->
 
-    {% include slipstream_intro.html %}
+    <!--<div class="banner">
+      <div>
+        <a href="/jobs/index.html">We're hiring!</a>
+      </div>
+    </div>-->
 
+    <div style="margin-top: 3px;" class="jumbotron top_product slipstream">
+      <div class="container">
+        <h1>
+    	  {% if page.subtitle %}
+    	    {{ page.subtitle }}
+    	  {% else %}
+    	    SixSq: Smart Cloud Automation Solutions
+        {% endif %}
+      	</h1>
+        {% if page.subtitle %}
+          <p>{{ page.summary }}</p>
+        {% else %}
+          <p>Our smart cloud solutions deliver the business benefits of PaaS, DevOps and Hybrid Cloud.</p>
+        {% endif %}<p>Sign Up for SlipStream Training Event! <a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-sixsqs-cloud-management-platform-tickets-17440176036?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=17440176036" alt="Eventbrite - SlipStream Training: hands on use of SixSq&#39;s cloud management platform" /></a></p>
+      </div>
+    </div>
+    
   	<div class="jumbotron">
       <div class="container">
-        {% include slipstream_pitch.html %}
+          <div class="row row-summary row-summary-sixsq">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+              <div>
+                <div>
+                  <h2>
+                    <center>
+                      <img src="/img/design/slipstream_logo_red_on_transparent_256px.png" alt="SlipStream">
+                    </center>
+                  </h2>
+                  <ul>
+                    <li>Platform as a Service Solution (PaaS)</li>
+                    <li>DevOps platform</li>
+                    <li>Hybrid Cloud Manager</li>
+                  </ul>
+                </div>
+                <center><a class="btn btn-primary btn-lg" role="button" 
+                  {% if page.layout == 'welcome' %}
+              	    href="/products/slipstream"
+              	  {% else %}
+            	      href="/products/slipstream/paas"
+              	  {% endif %}
+              	    >Learn more &raquo;</a></center>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+              <div>
+                <div>
+                  <h2>
+                    <center>
+                      <img src="/img/design/nuvlabox_logo_red_on_transparent_256px.png" alt="NuvlaBox">
+                    </center>
+                  </h2>
+                  <ul>
+                    <li>Private Cloud for SMEs</li>
+                    <li>Rapid IT for field operations</li>
+                    <li>Simple IT solution for a complex world</li>
+                  </ul>
+                </div>
+                <center>
+                    <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Discover &raquo;</a>
+                </center>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+              <div>
+                <div>
+                  <h2>
+                    <center>
+                      <img style="max-height: 40px;" src="/img/design/nuvla_logo_red_on_transparent_256px.png" alt="Nuvla">
+                    </center>
+                  </h2>
+                  <ul>
+                    <li>Online PaaS for multi-cloud deployment</li>
+                    <li>Automation as a Service </li>
+                    <li>Cloud Neutrality as a Service</li>
+                  </ul>
+                </div>
+                <center>
+                    <a class="btn btn-primary btn-lg" role="button" href="/services/nuvla">Read it &raquo;</a>
+                </center>
+              </div>
+            </div>
+          </div>
+        </div>
+    
       </div>
     </div>
        </div>
           </div>
-    </div>
-
-    {% include nuvlabox_intro.html %}
-
-    <div class="jumbotron main-story nuvlabox">
-      <div class="container">
-        {% include nuvlabox_pitch.html %}
-      </div>
     </div>
     
     {% include whats_next.html %}        
