--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -294,6 +294,44 @@ div.nuvlabox.odd {
   max-height: 130px;
 }
 
+.row-summary-sixsq img {
+  max-width: 200px;
+  max-height: 60px;
+}
+
+.row-summary-sixsq center {
+  height: 60px;
+}
+
+@media (min-width:1200px) { 
+  .row-summary-sixsq .col-md-4 > div > div {
+    height: 160px;
+    /*background: blue;*/
+  }
+}
+
+@media (max-width:1200px) { 
+  .row-summary-sixsq .col-md-4 > div > div {
+    height: 180px;
+    /*background: white;*/
+  }
+}
+
+@media (max-width:992px) { 
+  .row-summary-sixsq .col-md-4 > div > div {
+    height: auto;
+    /*background: yellow;*/
+  }
+}
+
+@media (max-width:768px) { 
+  .row-summary-sixsq .col-md-4 > div > div {
+    height: auto;
+    /*background: black;*/
+  }
+}
+
+
 @media (min-width:1200px) { 
   .row-summary-slipstream .col-md-4 > div > div {
     height: 270px;
