--- a/_includes/left_full.html
+++ b/_includes/left_full.html
@@ -1,5 +1,5 @@
 <div class="col-md-6">
   <center>
-    <img src="{{ post.image }}" />
+    <img style="padding-top: 20px;" src="{{ post.image }}" />
   </center>
 </div>
