--- a/_includes/left.html
+++ b/_includes/left.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
   <center>
-    <img style="max-height: 4em;" src="{{ post.image }}" />
+    <img style="padding-top: 20px; max-height: 12em;" src="{{ post.image }}" />
   </center>
 </div>
