--- a/_includes/right.html
+++ b/_includes/right.html
@@ -2,6 +2,9 @@
   {% if post.category == 'news' %}
     <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
   {% endif %}
+  <a href="{{ post.permalink }}">
+    <h2>{{ post.title }}</h2>
+  </a>
   <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
   {% if post.author %}
     <p/>
