--- a/_includes/right.html
+++ b/_includes/right.html
@@ -2,7 +2,7 @@
   {% if post.category == 'news' %}
     <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
   {% endif %}
-  <a href="{{ post.permalink }}">
+  <a href="{{ post.url }}">
     <h2>{{ post.title }}</h2>
   </a>
   <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
