Refactor training announcement

--- a/_includes/nuvla_intro.html
+++ b/_includes/nuvla_intro.html
@@ -18,6 +18,6 @@
     {% else %}
       <p>Affordable, multi-cloud application management platform, built on open source professional software, for the enterprise, with love.</p>
     {% endif %}
-<!--		<p>Sign Up for SlipStream Training Event!</p><a href="http://www.eventbrite.com/e/slipstream-training-hands-on-use-of-a-cloud-management-platform-tickets-16393996886?ref=ebtnebtckt" target="_blank"><img src="https://www.eventbrite.com/custombutton?eid=16393996886" alt="Eventbrite - SlipStream Training: hands on use of a cloud management platform" /></a> -->
+    {% include training.html %}
   </div>
 </div>
