Fixed some bugs with IE 9 and previous versions

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,4 +70,15 @@
 
 </script>
 
+<!--[if lt IE 10]>
+<style rel="stylesheet">
+  body > #error-modal {
+    display: none !important;
+  }
+  body > .in.modal-backdrop  {
+    display: none !important;
+  }
+</style>
+<![endif]-->
+
 </head>
