Adding back R&D for small screens

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -58,7 +58,7 @@
         <li id="nav-personae"><a href="/personae">Personae<span></span></a></li>
         <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
         <li><a href="http://support.sixsq.com">FAQ</a><span></span></li>
-        <li id="nav-r-and-d" class="hidden-sm"><a href="/r-and-d">R&amp;D</a><span></span></li>
+        <li id="nav-r-and-d"><a href="/r-and-d">R&amp;D</a><span></span></li>
         <li id="nav-about" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
