Update nav bar and add quotes

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -29,36 +29,40 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/services/nuvla"><b>Nuvla&trade;: </b> Online SlipStream&reg; managed by SixSq</a></li>
-            <li><a href="http://hnx.helix-nebula.eu"><b>Helix Nebula Marketplace</b>: Big science in the cloud</a></li>
+            <li><a href="/services/hnx"><b>Helix Nebula Marketplace</b>: Big science in the cloud</a></li>
           </ul>
           <span></span>
         </li>
-        <!--<li id="nav-usecases" class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Use Cases <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/products/slipstream/usecases#Enterprise-App-Store-/-Self-Service-IT">Deploy your own <b>Enterprise App Store / Self-Service IT</b></a></li>
-            <li><a href="/products/slipstream/usecases#Hybrid-Cloud-Provisioning"><b>Hybrid Cloud</b> without the headache</a></li>
-            <li><a href="/products/slipstream/usecases#LAMP-and-complex-application-provisioning"><b>Deploy complex apps</b> in any cloud in a snap</a></li>
-            <li><a href="/products/nuvlabox/usecases#Schools-or-Federation-of-Schools">Cloud appliance</b> to support <b>eLearning in emerging regions</b></a></li>
-            <li><a href="/products/nuvlabox/usecases#Field-Operations-with-Agile-Local-Infrastructure"><b>Turn-key field operation</b> infrastructure</a></li>
-          </ul>
-          <span></span>
-        </li>-->
-        <li id="nav-benefits" class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Benefits <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="http://media.sixsq.com/how-can-managed-service-providers-benefit-from-automation">Managed Service Provider (MSP)</a></li>
-            <li><a href="http://media.sixsq.com/how-can-vars-benefit-from-application-deployment-automation">Value Added Reseller (VAR)</a></li>
-            <li><a href="http://media.sixsq.com/how-can-iaas-providers-benefit-from-application-deployment-automation">IaaS provider</a></li>
-            <li><a href="http://media.sixsq.com/how-helix-nebula-marketplace-delivers-cloud-to-big-science">Big science organisation</a></li>
-            <li><a href="http://media.sixsq.com/how-to-bridge-the-digital-divide">IT provider in emerging economies</a></li>
-          </ul>
-          <span></span>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <span class="caret"></span></a>
+            <ul class="dropdown-menu multi-column columns-2">
+	            <div class="row">
+		            <div class="col-sm-6">
+			            <ul class="multi-column-dropdown">
+                    <li><!--<a href="/resources/for-all/overview">--><strong>For Everyone</strong><!--</a>--></li>
+                    <li><a href="/personae">Our Users</a></li>
+                    <!-- <li><a href="/case-studies">Case Studies</a></li> -->
+                    <li><a href="/news">News</a></li>
+                    <li><a href="/videos">Videos</a></li>
+                    <li><a href="/eguides">eGuides</a></li>
+                    <li><a href="/r-and-d">R&amp;D</a></li>
+                    <li><a href="http://media.sixsq.com/blog">Blog</a></li>
+			            </ul>
+		            </div>
+		            <div class="col-sm-6">
+			            <ul class="multi-column-dropdown">
+                    <li><!--<a href="/resources/for-developers/overview">--><strong>For Developers</strong><!--</a>--></li>
+                    <li><a href="http://ssdocs.sixsq.com/documentation/advanced_tutorial/">Tutorials</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/">Documentation</a></li>
+                    <li><a href="http://ssapi.sixsq.com/">API</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/documentation/administrator_guide/quick_installation.html">Install</a></li>
+                    <li><a href="http://support.sixsq.com/">Support</a></li>
+                    <li><a href="http://support.sixsq.com/">FAQ</a></li>
+			            </ul>
+		            </div>
+	            </div>
+            </ul>
         </li>
-        <li id="nav-personae"><a href="/personae">Personae<span></span></a></li>
-        <li><a href="http://media.sixsq.com/blog">Blog</a><span></span></li>
-        <li><a href="http://support.sixsq.com">FAQ</a><span></span></li>
-        <li id="nav-r-and-d"><a href="/r-and-d">R&amp;D</a><span></span></li>
         <li id="nav-about" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -66,16 +70,6 @@
             <li><a href="/contact">Contact</a></li>
             <li><a href="/customers">Customers</a><span></span></li>
             <li><a href="/jobs">Jobs</a><span></span></li>
-            <li><a href="http://support.sixsq.com">Support</a><span></span></li>
-          </ul>
-          <span></span>
-        </li>
-        <li id="nav-media" class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Media <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="/news">News</a></li>
-            <li><a href="/videos">Videos</a></li>
-            <li><a href="/eguides">eGuides</a></li>
           </ul>
           <span></span>
         </li>
