--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -106,6 +106,97 @@
       </div>
     </div>
     
+    <div class="jumbotron even quotes">
+      <div class="container">
+        <div class="row row-summary">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div>
+              <center>
+                <img src="/img/content/451-research-logo.png" alt="451 Research"/>
+                <h3>
+                  "SixSq delivers the type of fluid and secure solutions for application deployment automation that are critical to successful businesses."
+                </h3>
+                <h4>
+                  William Fellows, Analyst, Research Vice President and Co-founder, 451 Research
+                <h4>
+              </center>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div>
+              <center>
+                <img src="/img/content/Playgen-Logo.png" alt="PlayGen"/>
+                <h3>
+                  "SlipStream is much more transparent than the Amazon scaling tool &amp; the resilient scaling feature helps massively."
+                </h3>
+                <h4>
+                  Mayur Ahir, Senior Lead Developer, PlayGen
+                <h4>
+                <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Read Case Study &raquo;</a>
+              </center>
+            </div>
+          </div>
+        </div>
+<!--        <div class="row row-summary">
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div>
+              <center>
+                <h3>
+                  "SlipStream is to software what the robotic assembly line is to manufacturing"
+                </h3>
+                <h4>
+                  Marc-Elian Bégin, CEO and Co-founder, SixSq
+                <h4>
+              </center>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+          </div>
+        </div>
+        <div class="row row-summary">
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div>
+              <center>
+                <h3>
+                  "The first rule of any technology used in a business is that automation applied to an
+                  efficient operation will magnify the efficiency. The second is that automation applied
+                  to an inefficient operation will magnify the inefficiency."
+                </h3>
+                <h4>
+                  Bill Gates
+                <h4>
+              </center>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+          </div>
+        </div> -->
+      </div>
+    </div>
+<!--
+    <div class="jumbotron odd">
+      <div class="container">
+        <center>
+          <h3>
+            SixSq provides smart and fluid application deployment automation solutions, using cloud
+            technology, hard-work and a lot of listening and thinking.
+          </h3>
+          <h3>
+            Our solutions and products embody the idea that by automating repetitive and tedious
+            tasks, we can be much more productive, innovative and ultimately successful.
+          </h3>
+          <h3>
+            We hope our products and services will allow you to focus on what you do best, with
+            minimum friction when showing it to the world.
+          </h3>
+        </center>
+      </div>
+    </div>
+-->
     {% include whats_next.html %}        
     {% include footer.html %}
 
