--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -95,12 +95,36 @@ img {
   max-width: 620px !important;
 }
 
+.center {
+  display: block !important;
+  float: none !important;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  left: 0;
+  right: 0
+}
+
+.quotes img {
+  max-width: 200px;
+  padding-top: 20px;
+}
+
 div.odd {
   background: #eee;
 }
 
 div.even {
   background: white;
+}
+
+div.plain {
+  background: white;
+}
+
+div.quote {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  max-width: 500px;
 }
 
 div.nuvlabox.even,
@@ -485,4 +509,42 @@ div.nuvlabox.odd {
 .col-2-image h2 {
   font-size: 3.3em;
 }
-  
+
+/* Multi-column dropdown menu */
+.dropdown-menu {
+	min-width: 100px;
+}
+.dropdown-menu.columns-2 {
+	min-width: 300px;
+}
+.dropdown-menu.columns-3 {
+	min-width: 450px;
+}
+.dropdown-menu li a {
+	padding: 5px 15px;
+	font-weight: 300;
+}
+.multi-column-dropdown {
+	list-style: none;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+.multi-column-dropdown li a {
+	display: block;
+	clear: both;
+	line-height: 1.428571429;
+	color: #333;
+	white-space: normal;
+}
+.multi-column-dropdown li a:hover {
+	text-decoration: none;
+	color: #262626;
+	background-color: #f5f5f5;
+}
+
+@media (max-width: 767px) {
+	.dropdown-menu.multi-column {
+		min-width: 240px !important;
+		overflow-x: hidden;
+	}
+}
