Update case study link

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -132,7 +132,7 @@
                 <h4>
                   Mayur Ahir, Senior Lead Developer, PlayGen
                 <h4>
-                <a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox">Read Case Study &raquo;</a>
+                <a class="btn btn-primary btn-lg" role="button" href="http://media.sixsq.com/case-study-how-playgen-develops-software-faster-with-slipstream">Read Case Study &raquo;</a>
               </center>
             </div>
           </div>
