fix links to documentation after migration to RTD

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -52,10 +52,10 @@
 		            <div class="col-sm-6">
 			            <ul class="multi-column-dropdown">
                     <li><!--<a href="/resources/for-developers/overview">--><strong>For Developers</strong><!--</a>--></li>
-                    <li><a href="http://ssdocs.sixsq.com/documentation/advanced_tutorial/">Tutorials</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/en/latest/advanced_tutorial/index.html">Tutorials</a></li>
                     <li><a href="http://ssdocs.sixsq.com/">Documentation</a></li>
                     <li><a href="http://ssapi.sixsq.com/">API</a></li>
-                    <li><a href="http://ssdocs.sixsq.com/documentation/administrator_guide/quick_installation.html">Install</a></li>
+                    <li><a href="http://ssdocs.sixsq.com/en/latest/administrator_guide/quick_installation.html">Install</a></li>
                     <li><a href="http://support.sixsq.com/">Support</a></li>
                     <li><a href="http://support.sixsq.com/">FAQ</a></li>
 			            </ul>
