--- a/_includes/right.html
+++ b/_includes/right.html
@@ -5,7 +5,7 @@
   {% if post.category == 'news' %}
     <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
   {% endif %}
-  <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
+  <p>{{ post.content | strip_html | truncatewords: 25 }}<a href="{{ post.url }}"> read more</a></p>
   {% if post.author %}
     <p/>
     <div class="author">By: {{ post.author }}</div>
