--- a/_layouts/job_index.html
+++ b/_layouts/job_index.html
@@ -22,7 +22,7 @@
         <h2>
           <a href="{{ post.url }}" class="title">{{ post.title }}</a>
         </h2>
-        <p>{{ post.content | strip_html | truncatewords: 25 }}</p>
+        <p>{{ post.content | strip_html | truncatewords: 25 }}<a href="{{ post.url }}"> read more</a></p>
         {% if post.category == news %}
           <div class="date">{{ post.date | date: "%d %B %Y" }}</div>
         {% endif %}
