--- a/_includes/top.html
+++ b/_includes/top.html
@@ -29,7 +29,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/services/nuvla"><b>Nuvla&trade;: </b> Online SlipStream&reg; managed by SixSq</a></li>
-            <li><a href="https://bb1.hnx.helix-nebula.eu"><b>Helix Nebula Marketplace</b>: Big science in the cloud</a></li>
+            <li><a href="http://hnx.helix-nebula.eu"><b>Helix Nebula Marketplace</b>: Big science in the cloud</a></li>
           </ul>
           <span></span>
         </li>
