--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -21,24 +21,40 @@
 
     <div style="margin-top: 3px;" class="jumbotron top_product slipstream">
       <div class="container">
-        <h1>
-    	  {% if page.subtitle %}
-    	    {{ page.subtitle }}
-    	  {% else %}
-    	    SixSq: Smart Cloud Automation Solutions
-        {% endif %}
-      	</h1>
-        {% if page.subtitle %}
-          <p>{{ page.summary }}</p>
-        {% else %}
-          <p>Our smart cloud solutions deliver the business benefits of PaaS, DevOps and Hybrid Cloud.</p>
-        {% endif %}
-        {% include training.html %}
+          <div class="row row-summary row-summary-sixsq">
+            <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+                <h1>
+            	  {% if page.subtitle %}
+            	    {{ page.subtitle }}
+            	  {% else %}
+            	    SixSq: Smart Cloud Automation Solutions
+                {% endif %}
+              	</h1>
+                {% if page.summary %}
+                  <p>{{ page.summary }}</p>
+                {% else %}
+                  <p>Our smart cloud solutions deliver the business benefits of PaaS, DevOps and Hybrid Cloud.</p>
+                {% endif %}
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                <center>
+                <a href="/contact/#contact-us-form" class="btn btn-primary btn-lg banner-message">
+                    <h2>
+                    Questions?
+                    </h2>
+                    <h3>
+                    Contact Us!
+                    </h3>
+                </a>
+                </center>
+            </div>
+          </div>
       </div>
     </div>
     
   	<div class="jumbotron">
       <div class="container">
+          <h2>What are you looking for?</h2>
           <div class="row row-summary row-summary-sixsq">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
               <div>
@@ -47,11 +63,16 @@
                     <center>
                       <img src="/img/design/slipstream_logo_red_on_transparent_256px.png" alt="SlipStream">
                     </center>
+                    <center>
+                      Our Cloud App Deployment Software Solution
+                    </center>
                   </h2>
                   <ul>
-                    <li>Platform as a Service Solution (PaaS)</li>
-                    <li>DevOps platform</li>
-                    <li>Hybrid Cloud Manager</li>
+                    <li>Supports New and Legacy applications</li>
+                    <li>All clouds included</li>
+                    <li>Great open source DevOps platform</li>
+                    <li>Simple Multi Cloud solution</li>
+                    <li>Build your own powerful PaaS</li>
                   </ul>
                 </div>
                 <center><a class="btn btn-primary btn-lg" role="button" 
@@ -70,11 +91,15 @@
                     <center>
                       <img src="/img/design/nuvlabox_logo_red_on_transparent_256px.png" alt="NuvlaBox">
                     </center>
+                    <center>
+                      Our Smart Cloud-in-a-box Appliance 
+                    </center>
                   </h2>
                   <ul>
                     <li>Private Cloud for SMEs</li>
-                    <li>Rapid IT for field operations</li>
-                    <li>Simple IT solution for a complex world</li>
+                    <li>Rapid deployment for field operations</li>
+                    <li>Zero config making IT a child play</li>
+                    <li>Perfect private cloud companion for hybrid solution</li>
                   </ul>
                 </div>
                 <center>
@@ -89,11 +114,16 @@
                     <center>
                       <img style="max-height: 40px;" src="/img/design/nuvla_logo_red_on_transparent_256px.png" alt="Nuvla">
                     </center>
+                    <center>
+                      Our Free Application Deployment as a Service 
+                    </center>
                   </h2>
                   <ul>
-                    <li>Online PaaS for multi-cloud deployment</li>
-                    <li>Automation as a Service </li>
-                    <li>Cloud Neutrality as a Service</li>
+                    <li>Online multi-cloud application deployment</li>
+                    <li>Easy access to range of cloud providers</li>
+                    <li>Single dashboard for simplified cost control</li>
+                    <li>Friction-less application deployment</li>
+                    <li>Powered by SlipStream</li>
                   </ul>
                 </div>
                 <center>
@@ -106,8 +136,9 @@
       </div>
     </div>
     
-    <div class="jumbotron even quotes">
+    <div class="jumbotron quotes">
       <div class="container">
+          <h2>What people say about us?</h2>
         <div class="row row-summary">
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div>
@@ -137,67 +168,26 @@
             </div>
           </div>
         </div>
-<!--        <div class="row row-summary">
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <div>
-              <center>
-                <h3>
-                  "SlipStream is to software what the robotic assembly line is to manufacturing"
-                </h3>
-                <h4>
-                  Marc-Elian Bégin, CEO and Co-founder, SixSq
-                <h4>
-              </center>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-          </div>
-        </div>
-        <div class="row row-summary">
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-          </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-            <div>
-              <center>
-                <h3>
-                  "The first rule of any technology used in a business is that automation applied to an
-                  efficient operation will magnify the efficiency. The second is that automation applied
-                  to an inefficient operation will magnify the inefficiency."
-                </h3>
-                <h4>
-                  Bill Gates
-                <h4>
-              </center>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-          </div>
-        </div> -->
       </div>
     </div>
-<!--
-    <div class="jumbotron odd">
+
+    <div class="jumbotron coming-next">
       <div class="container">
-        <center>
-          <h3>
-            SixSq provides smart and fluid application deployment automation solutions, using cloud
-            technology, hard-work and a lot of listening and thinking.
-          </h3>
-          <h3>
-            Our solutions and products embody the idea that by automating repetitive and tedious
-            tasks, we can be much more productive, innovative and ultimately successful.
-          </h3>
-          <h3>
-            We hope our products and services will allow you to focus on what you do best, with
-            minimum friction when showing it to the world.
-          </h3>
-        </center>
+          <h2>What's coming up?</h2>
+        <div class="row row-summary">
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                {% include training.html %}
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <div>
+                Join us at Cloud Expo Europe
+                {% include training.html %}
+                </div>
+            </div>
+        </div>
       </div>
     </div>
--->
-    {% include whats_next.html %}        
+
     {% include footer.html %}
 
   </body>
